# docker-spawn-modelica

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/flow/: IncompressibleFluidNetwork.mo
examples/load_example/: load_file.mo
examples/mixed_loads/: package.mo
examples/mixed_loads/Districts/: DistrictEnergySystem.mo  package.mo
examples/mixed_loads/Loads/: package.mo  package.order
examples/mixed_loads/Loads/Resources/Scripts/teaserID/Dymola/: RunTeaserCouplingBuilding.mos
examples/mixed_loads/Loads/teaserID/: Floor.mo  ICT.mo  Meeting.mo  Office.mo  Restroom.mo  Storage.mo  building.mo  coupling.mo  package.mo
examples/mixed_loads/Loads/timeSeriesID/: building.mo  package.mo
examples/mixed_loads/Plants/: BoilerStage.mo  Boiler_TParallel.mo  CentralCoolingPlant.mo  CentralHeatingPlant.mo  ChilledWaterPumpSpeed.mo  ChillerStage.mo  CoolingTowerParallel.mo  CoolingTowerWithBypass.mo  HeatingWaterPumpSpeed.mo  PartialPlantParallel.mo  PartialPlantParallelInterface.mo  ValveParameters.mo  package.mo
examples/mixed_loads/Substations/: CoolingIndirect_teaserID.mo  CoolingIndirect_timeSeriesID.mo  HeatingIndirect_teaserID.mo  HeatingIndirect_timeSeriesID.mo  package.mo  package.order
tests/: compile_test.py
